13/01/2024 - 3
==============
Cleanup of makefile
Changes to the paths
Changes to makefile , addition of distclean, install, installclean
By default installs to /tmp/httpd/
ServerName+version displayed in logs and http response is github url converted to a string that replaces '/' with '_'
Changes to testloop.sh url so that the test script works properly


13/01/2024 - 2
==============
Cleanup of makefile
Testing pthreads and cpp11threads
Testing with -O2 flag


13/01/2024 - 1
==============
Added support for removal of post temporary file, Should be removed from plugins. Multipart read has to be end-user implementation.
Added support for large file upload through POST multipart.
Changed all the file offset from int to size_t for 64bit support
Code cleanup.


12/01/2024
==========
Added support for heirarchical users
Added support for static htmls 
Added support for static html that's sent if user authentication is valid
Added support for static html on a per user basis
Added support for login plugin
Added support for a simple interface for a embedded device


21/03/2021
==========
Removal of upnp and md5
Addition of rand_reentrant as a replacement of rand_r (which is not present on msys64) [copied from bsd version of source]
Updated makefiles (makefile for linux and makefile.msys64 for windows msys64 environment)
Removed mingw32 makefile
Updated session id creation using random numbers instead of MD5
Added astyle scripts to autoindent the source
Fixed indentation of the whole project
Moved upnp and md5 related source to unused.


20/03/2021
==========
Support for msys64
Removal of nspr libraries, wrappers created for functions and structures
Removal of miniupnpc libraries


29/04/2016
==========
Made changes to the way session variables are read and stored, new functions added.


16/04/2016
==========
Makefile addition for mingw32 compilation
Addition of libcopy.sh for copying libraries to a folder containing binaries
Miniupnp integration for windows. 